tests/fixtures/invalid/bool_bitor_str.py
# Cannot bitwise OR Bool and Str
x: bool = True | "hello"
